src/components/Options/style.module.css
.menu {
	background: var(--color-options-menu-bg);
	height: 100%;
	position: fixed;
	left: 0;
	top: 0;
	bottom: 0;
	width: min(40rem, 75vw);
	color: black;
	z-index: 100;
	transition: all 0.2s ease-in-out;
	transform: translateX(-100%);
	overflow-y: auto;
	display: flex;
	flex-direction: column;
}

.menu.active {
	transform: translateX(0);
}

.json {
	max-width: 100%;
	font-size: 1rem;
	padding: 1rem;
	margin: 1rem 0;
}

.button {
	position: absolute;
	inset: 0 auto auto 0;
	margin: 0;
	padding: 1.5rem;
	background-color: transparent;
	border: none;
	z-index: 200;
	cursor: pointer;
	outline: none;
	display: grid;
	gap: 0.4rem 0.5rem;
	grid-template:
		'topBarLeft topBarRight topBarRight topBarRight' 1fr
		'bottomBar bottomBar bottomBar bottomBar' 1fr / 1fr 1fr 1fr 1fr;
}

.close-button {
	position: absolute;
	inset: 0 auto auto 0;
	margin: 0;
	padding: 1.75rem;
	background-color: transparent;
	border: none;
	z-index: 210;
	cursor: pointer;
	outline: none;
	opacity: 0;
	transition: all var(--animation-duration-options) ease;
	transform: rotate(-90deg);
	pointer-events: none;
}

.close-button.active {
	opacity: 1;
	transform: rotate(0deg);
	pointer-events: all;
}

.close-button-bar1,
.close-button-bar2 {
	height: 2px;
	background-color: black;
	width: 1.5rem;
	transform-origin: 0.65rem 0.1rem;
}

.close-button-bar1 {
	transform: rotate(45deg);
}

.close-button-bar2 {
	transform: rotate(-45deg);
}

.button-bar1,
.button-bar2,
.button-bar3 {
	height: 0.25rem;
	background-color: var(--color-ui);
	opacity: var(--opacity-ui);
	transition: 0.15s;
}

.button:hover .button-bar1 {
	width: 0.8rem;
}

.button-bar1 {
	width: 0.7rem;
	grid-area: topBarLeft;
}

.button-bar2 {
	width: 60%;
	grid-area: topBarRight;
}

.button-bar3 {
	width: 55%;
	grid-area: bottomBar;
}

.button.active .button-bar1,
.button.active .button-bar2,
.button.active .button-bar3 {
	opacity: 0;
}

.options-menu {
	position: fixed;
	z-index: 200;
	width: 100vw;
	inset: 0;
	visibility: hidden;
}

.options-menu.active {
	visibility: visible;
}

.options-bar {
	display: flex;
	justify-content: space-around;
	align-items: center;
	background: var(--color-ui);
	min-height: 4rem;
	transform: translateX(-100%);
	transition: all var(--animation-duration-options)
		var(--animation-timing-options);
}

.active .options-bar {
	transform: translateX(0);
}

.options-content-container {
	position: relative;
	height: 100vh;
	overflow: hidden;
}

.options-content {
	background: linear-gradient(180deg, #cfd9df 0%, #e2ebf0 100%);
	display: flex;
	width: 100%;
	height: 100%;
	justify-content: center;
	align-content: center;
	flex-direction: column;
	transform: translateY(-100%);
	transition: all var(--animation-duration-options)
		var(--animation-timing-options);
}

.options-panel {
	position: absolute;
	display: flex;
	width: 100%;
	height: 100%;
	justify-content: center;
	align-content: center;
	flex-direction: column;
}

.active .options-content {
	transform: translateY(0);
}

.slide-transition-enter {
	transform: translateX(-100%);
	opacity: 0;
}

.slide-transition-enter-active {
	transform: translateX(0);
	opacity: 1;
	transition:
		transform 0.5s ease,
		opacity 0.5s ease;
}

.slide-transition-exit {
	transform: translateX(0);
	opacity: 1;
}

.slide-transition-exit-active {
	transform: translateX(100%);
	opacity: 0;
	transition:
		transform 0.5s ease,
		opacity 0.5s ease;
}

/* TODO: vars for colors and animation durations */

